--- a/basics/demo.html
+++ b/basics/demo.html
@@ -16,6 +16,7 @@
 	</style>
 </head>
 <body>
+	<!-- navbar -->
 	<nav class="navbar navbar-dark bg-dark navbar-expand-xl">
 		<div class="container">
 			<a href="#" class="navbar-brand">Brand</a>
