--- a/basics/navbar.html
+++ b/basics/navbar.html
@@ -29,34 +29,7 @@
         </div>
     <!-- </div> -->
     </nav>
-    <!-- As a heading -->
-    <!-- <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mt-0 h1">Brand</span>
-    </nav> -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-xl">
-        <div class="container">
-            
-        <a href="#" class="navbar-brand">Brand</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#data" aria-controls="data" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="data">
-            <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link">Home</a>
-                <a href="#" class="nav-item nav-link">About</a>
-                <a href="#" class="nav-item nav-link">Contact</a>
-            </div>
-
-        </div>
-        </div>
-    </nav>
-
-    <div class="container px-lg-5">
-  <div class="row mx-lg-n5">
-    <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
-    <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
-  </div>
-</div>
+shipping cost : $10
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../bootstrap.js"></script>
